--- a/samconfig.toml
+++ b/samconfig.toml
@@ -9,6 +9,8 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"default\""
 image_repositories = []
 confirm_changeset = true
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1hx5xyc28ip3b"
+disable_rollback = true
 
 [staging]
 [staging.deploy]
