--- a/samconfig.toml
+++ b/samconfig.toml
@@ -16,6 +16,7 @@ disable_rollback = true
 [staging.deploy]
 [staging.deploy.parameters]
 stack_name = "todo-list-aws-staging"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1hx5xyc28ip3b"
 s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
@@ -26,6 +27,7 @@ image_repositories = []
 [production.deploy]
 [production.deploy.parameters]
 stack_name = "todo-list-aws-production"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1hx5xyc28ip3b"
 s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
